complete doing jwt authentication of login and get profile user by authorzie token with bearer
