# internal/entity/error.go
@@ -1,0 +1,6 @@
+package entity
+
+type ErrorResponse struct {
+	// StatusCode int    `json:"status_code"`
+	Message string `json:"message"`
+}
