# internal/entity/user.go
@@ -6,6 +6,7 @@ type User struct {
 	ID        int       `json:"id"`
 	Name      string    `json:"name"`
 	Email     string    `json:"email"`
+	Password  string    `json:"password"`
 	SubjectID int       `json:"subject_id,omitempty"`
 	Status    bool      `json:"status"`
 	Day       int       `json:"day"`
@@ -18,12 +19,14 @@ type User struct {
 type CreateUserRequest struct {
 	Name      string `json:"name"`
 	Email     string `json:"email"`
+	Password  string `json:"password"`
 	SubjectID int    `json:"subject_id,omitempty"`
 }
 
 type UpdateUserRequest struct {
 	Name      string `json:"name,omitempty"`
 	Email     string `json:"email,omitempty"`
+	Password  string `json:"password,omitempty"`
 	SubjectID int    `json:"subject_id,omitempty"`
 	Status    bool   `json:"status,omitempty"`
 }
@@ -32,8 +35,12 @@ type UserResponse struct {
 	ID        int       `json:"id"`
 	Name      string    `json:"name"`
 	Email     string    `json:"email"`
+	Password  string    `json:"password"`
 	SubjectID int       `json:"subject_id,omitempty"`
 	Status    bool      `json:"status"`
+	Day       int       `json:"day"`
+	Month     int       `json:"month"`
+	Year      int       `json:"year"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
@@ -46,9 +53,4 @@ type UserListResponse struct {
 		Total      int `json:"total"`
 		TotalPages int `json:"totalPages"`
 	} `json:"meta"`
-}
-
-type ErrorResponse struct {
-	// StatusCode int    `json:"status_code"`
-	Message string `json:"message"`
 }
